# knowledge-share

./: .gitignore  .gitmodules  README.md  pyproject.toml
hack/: argocd_admin_pw.sh  nginx_ingress.sh  postgres.sh
slides/: slide_reference.md  slides.md
src/argocd/: Pulumi.metacluster.yaml  Pulumi.yaml  __main__.py
src/manifest/mysql/: main.yaml
src/manifest/prometheus_app/: main.yaml
src/manifest/sample_stack/: recursion.yaml
src/metacluster/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  argocd.py  nginx.py  pulumi_op.py
